Bug 58339 - UI Conditional Formatting > Manage: all conditions shown fully, last with missing bottom half
Summary: UI Conditional Formatting > Manage: all conditions shown fully, last with mis...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.0.0.0.beta2 target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-15 16:20 UTC by Cor Nouws
Modified: 2012-12-17 10:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-12-15 16:20:23 UTC
Select range
Formatting > Conditional Formatting > Condition
Add two conditions
OK

Formatting > Conditional Formatting > Manage
Choose relevant range and Edit
 > Second condition is not fully visible
Comment 1 Rainer Bielefeld Retired 2012-12-15 16:35:10 UTC
Already [Reproducible] with "LibreOffice 3.6.4.3" German UI/ German Locale [Build-ID: 2ef5aff] {pull date 2012-11-28} on German WIN7 Home Premium (64bit), also in normal CF edit mode when you edit an existing CF.

I think the problem is that all existing CF are shown completely in the dialog, I would have expected that only th 1 "active" one is shown
Comment 2 Not Assigned 2012-12-15 16:36:02 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96b736d7db8047d28bd122fb3439c02f6a67ffda&g=libreoffice-4-0

force size recalculation if existing cond format is displayed, fdo#58339


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Not Assigned 2012-12-15 16:36:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32877bf72b1e50fe968c1d4b56329ba47e292771

force size recalculation if existing cond format is displayed, fdo#58339



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Rainer Bielefeld Retired 2012-12-15 17:08:37 UTC
Was still ok with Server Installation of "LibreOffice 3.6.2.1 rc  German UI/ German Locale [Build-ID:  ba822cc] on German WIN7 Home Premium (64bit) 

@Markus
2fast4me, can't you wait with fixing until I have done my comment?    :-)
Comment 5 Rainer Bielefeld Retired 2012-12-17 10:38:54 UTC
Looks fine with server  installation of  "LOdev  4.0.0.0.beta1+   -  ENGLISH UI / German Locale  [Build ID: 6d4a55bf38a1c470c49f904dbbddf94eb2f6154)]"  {tinderbox: Win-x86@6, pull time 2012-12-17 08:36:40} on German WIN7 Home Premium (64bit) with own separate User Profile