force size recalculation if existing cond format is displayed, fdo#58339

Change-Id: I916c78452dd3dc7f29940ce784ca79d687f375a0